# OfflineStrayMapper

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  StrayCamera.h  main.cpp  requirements.txt
include/: IMUThread.h  MapBuilderThreads.h  StrayCamera.h  StrayMapper.h  clipp.h
include/util/: PyScript.h
scripts/: check_cuda_availability.py  clustering.py  resampling.py  triangulation.py  upscale_depth.py
scripts/util/: pcio.py
src/: IMUThread.cpp  StrayMapper.cpp  Triangulation.cpp  main.cpp
src/util/: PyScript.cpp
